...
                                        <fontDescription key="fontDescription" name="DejaVuSans" family="DejaVu Sans" pointSize="17"/>
                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XkB-Li-sQN" userLabel="Crank">
                                        <rect key="frame" x="8" y="9" width="25" height="25"/>
                                        <accessibility key="accessibilityConfiguration" label="Settings"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="25" id="fxr-qk-Hy4"/>
                                            <constraint firstAttribute="width" secondItem="XkB-Li-sQN" secondAttribute="height" multiplier="1:1" id="wJU-QT-D6X"/>
                                        </constraints>
                                        <state key="normal" image="crank">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                                    <outletCollection property="gestureRecognizers" destination="ZSU-eY-Mo7" appends="YES" id="dyJ-aM-BDF"/>
                                </connections>
                            </collectionView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UrJ-Up-pN4" userLabel="Lap Button">
                                <rect key="frame" x="198" y="172" width="66" height="32"/>
                                <fontDescription key="fontDescription" name="DejaVuSans" family="DejaVu Sans" pointSize="17"/>
                                <state key="normal" title="Interval">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <state key="highlighted">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <userDefinedRuntimeAttributes>
...
